NewArchive/4020b5f131e0770179a526362b5b8dc2-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:1:1: error: 'aaabc' does not name a type
 aaabc
 ^
